--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Animations_01</string>
+    <string name="color_picker">Color Picker</string>
     <string name="action_settings">Settings</string>
     <string name="raw_anim">Raw</string>
     <string name="obj_anim">Smooth Move</string>
@@ -11,6 +12,6 @@
     <string name="color_anim">Animate Color Change</string>
     <string name="movecolor_anim">Move and Recolor</string>
     <string name="moverotatecolor_anim">Move and Rotate, Then Color</string>
-    <string name="teleport">Teleport</string>
-    <string name="shrink">Shrink</string>
+    <string name="teleport">APPEAR!</string>
+    <string name="shrink">LITTLE THING!!!</string>
 </resources>
